<resources>
    <string name="app_name">study</string>
    <string name="username">用户名</string>
    <string name="register">注册</string>
    <string name="确认密码">确认密码</string>
    <string name="密码">密码</string>
    <string name="登录">登录</string>
    <string name="reset">重置</string>
    <string name="age">年龄</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user_info_title">个人信息</string>
</resources>