<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">

    <TextView
        android:id="@+id/name"
        android:layout_width="191dp"
        android:layout_height="50dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="173dp"
        android:hint="@string/username"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pwd"
        android:layout_width="174dp"
        android:layout_height="53dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="36dp"
        android:hint="@string/密码"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="266dp"
        android:layout_marginBottom="329dp"
        android:hint="@string/age"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd" />

    <Button
        android:id="@+id/backlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:text="返回登录"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>